Series order by volume number, show volume number, keyword filter, fix overflow bug

--- a/client/assets/app.css
+++ b/client/assets/app.css
@@ -108,5 +108,5 @@
 }
 
 .box-shadow-side {
-  box-shadow: 4px 0px 4px #11111166;
+  box-shadow: 5px 0px 5px #11111166;
 }
